[metadata]
name = spritejoin
version = attr: spritejoin.version.__version__
author = Josh Tompkin
author_email = jtompkindev@gmail.com
description = Join image files into a single sprite map
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jtompkin/SpriteJoin
license = MIT License
license_files = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
package_dir = 
    = src
packages = find:
python_requires = >=3.8
install_requires =
    Pillow

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    spritejoin = spritejoin.main:main
